[tool.poetry]
name = "happy-yabai"
version = "0.1.0"
description = ""
authors = ["Alberto Miorin <32617+amiorin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
happy-yabai = 'happy_yabai:run'